# distributed-optimization

./: LICENSE  Manager.py  README.md  pyproject.toml
distopt/: Message.py  Task.py
drmq_optimization/: Manager.py  Message.py  Task.py  Worker.py  __init__.py
